--- a/index.html
+++ b/index.html
@@ -1,1 +1,29 @@
-<h1>This is the title of the website</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Resume - Your Name</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <header>
+        <img src="profile.jpg" alt="Your Name" class="profile-image">
+        <h1>Your Name</h1>
+        <p>Your Profession</p>
+    </header>
+    <section class="bio">
+        <h2>About Me</h2>
+        <p>Short bio or personal statement. Highlight your professional background, skills, and achievements.</p>
+    </section>
+    <section class="resume-download">
+        <h2>Resume</h2>
+        <a href="resume.pdf" download="YourName_Resume.pdf">Download My Resume</a>
+    </section>
+    <footer>
+        <h2>Contact Me</h2>
+        <p>Email: your.email@example.com</p>
+        <p>Phone: (123) 456-7890</p>
+    </footer>
+</body>
+</html>
