--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
     <header>
         <img src="profile.jpg" alt="Your Name" class="profile-image">
-        <h1>Your Name</h1>
-        <p>Your Profession</p>
+        <h1>Mr. Phillips</h1>
+        <p>TCA Engineering Instructor</p>
     </header>
     <section class="bio">
         <h2>About Me</h2>
